--- a/T5_model_demo1.ipynb
+++ b/T5_model_demo1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNFrAqM0UVACGd9IpppjP8O",
+      "authorship_tag": "ABX9TyNlxyrptlVhkOI9yHI1Kl7w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Using main class"
+      ],
+      "metadata": {
+        "id": "f12MIBALn5AU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import time\n",
@@ -113,15 +122,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Using pipeline on t5-small"
-      ],
-      "metadata": {
-        "id": "j5Jv19s6n78Z"
-      }
     },
     {
       "cell_type": "code",
