--- a/constitution_gradio_app.ipynb
+++ b/constitution_gradio_app.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1aOHNICgxXu5Ltys-30i0Y4t7XVbIcG1T",
-      "authorship_tag": "ABX9TyNNRfbk0jNHC2WmbffoIjO+",
+      "authorship_tag": "ABX9TyOk11wm4mbdxNAsWPMYGC0i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,26 +37,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pip install -U -q datasets\n",
-        "# !pip install -q PyPDF2\n",
-        "# %pip install --quiet --upgrade langchain-text-splitters langchain-community langgraph\n",
-        "# %pip install -U -q langchain-openai\n",
-        "# %pip install -q chromadb"
+        "!pip install -U -q datasets\n",
+        "!pip install -q PyPDF2\n",
+        "%pip install --quiet --upgrade langchain-text-splitters langchain-community langgraph\n",
+        "%pip install -U -q langchain-openai\n",
+        "%pip install -q chromadb"
       ],
       "metadata": {
         "id": "HeA9JPoXgEo2"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "download indian constitution from here: https://legislative.gov.in/constitution-of-india/ and save it on your google drive"
-      ],
-      "metadata": {
-        "id": "mqXy-yZGs9rf"
-      }
     },
     {
       "cell_type": "code",
@@ -81,6 +72,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "download indian constitution from here: https://legislative.gov.in/constitution-of-india/ and save it on your google drive"
+      ],
+      "metadata": {
+        "id": "5UExCClIuH2W"
+      }
     },
     {
       "cell_type": "markdown",
